--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NGO</title>
+  <meta charset="UTF-8" />
+  <title>NGO</title>
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
-    <header>
+  <header>
     <h1>NGO Cafe</h1>
     <nav>
       <ul>
@@ -52,8 +52,8 @@
   <footer>
     <p>Email: something@gmail.com</p>
     <p>
-      <a href="#">Facebook</a> 
-       <a href="#">Twitter</a>
+      <a href="#">Facebook</a>
+      <a href="#">Twitter</a>
     </p>
   </footer>
 </body>
